@@ -12,6 +12,7 @@ Changelog 0.8.1.1
 + slider drawing improvment
 + resize the background of label controls
 [SA-00500] MediaPlayer: facebook like: extend the like function
+[SA-00436] Sally: volume change should show a PopUp
 
 
 Changelog 0.8.0.6
